--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"strict": false,
+		"strict": true,
 		"skipLibCheck": true,
 		"skipDefaultLibCheck": true,
 		"declaration": false,
